Renamed ch8 to budjet, ch9 to ch8. Fixed html style

--- a/challenge6/index.html
+++ b/challenge6/index.html
@@ -2,95 +2,95 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet"
-          href="../css/style.css">
-    <title>Js courses</title>
+  <meta charset="UTF-8">
+  <meta name="viewport"
+        content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet"
+        href="../css/style.css">
+  <title>Js courses</title>
 </head>
 
 <body>
-<main class="main challenge-6">
+  <main class="main challenge-6">
     <div class="player-0-panel active">
-        <div class="player-name"
-             id="name-0">Jhon
+      <div class="player-name"
+           id="name-0">Jhon
+      </div>
+      <div class="player-score"
+           id="score-0">43
+      </div>
+      <div class="player-current-box">
+        <div class="player-current-label">Current</div>
+        <div class="player-current-score"
+             id="current-0">11
         </div>
-        <div class="player-score"
-             id="score-0">43
-        </div>
-        <div class="player-current-box">
-            <div class="player-current-label">Current</div>
-            <div class="player-current-score"
-                 id="current-0">11
-            </div>
-        </div>
+      </div>
     </div>
     <div class="player-1-panel">
-        <div class="player-name"
-             id="name-1">Alex
+      <div class="player-name"
+           id="name-1">Alex
+      </div>
+      <div class="player-score"
+           id="score-1">72
+      </div>
+      <div class="player-current-box">
+        <div class="player-current-label">Current</div>
+        <div class="player-current-score"
+             id="current-1">0
         </div>
-        <div class="player-score"
-             id="score-1">72
-        </div>
-        <div class="player-current-box">
-            <div class="player-current-label">Current</div>
-            <div class="player-current-score"
-                 id="current-1">0
-            </div>
-        </div>
+      </div>
     </div>
     <button class="btn-new">
-        <img class="icon"
-             src="https://image.flaticon.com/icons/svg/25/25304.svg">New
-        game
+      <img class="icon"
+           src="https://image.flaticon.com/icons/svg/25/25304.svg">New
+      game
     </button>
     <button class="btn-roll">
-        <img class="icon"
-             src="https://cdn2.iconfinder.com/data/icons/lovely-line-package/44/_-3-512.png">
-        Roll dice
+      <img class="icon"
+           src="https://cdn2.iconfinder.com/data/icons/lovely-line-package/44/_-3-512.png">
+      Roll dice
     </button>
     <button class="btn-hold">
-        <img class="icon"
-             src="https://image.flaticon.com/icons/svg/46/46246.svg">
-        Hold
+      <img class="icon"
+           src="https://image.flaticon.com/icons/svg/46/46246.svg">
+      Hold
     </button>
     <img src="dice-5.png"
          alt="Dice"
          class="dice">
-</main>
-<footer class="footer u-margin-top-medium">
+  </main>
+  <footer class="footer u-margin-top-medium">
     <section class="footer__section">
-        <ul>
-            <li>get in touch &rarr;</li>
-            <li>
-                <a href="https://twitter.com/qu1etRain">
-                    <img class="icon"
-                         src="https://image.flaticon.com/icons/svg/59/59046.svg">
-                </a>
-            </li>
-            <li>
-                <a href="https://codepen.io/VitaliiLynnyk">
-                    <img class="icon"
-                         src="http://cdn.onlinewebfonts.com/svg/img_336066.png">
-                </a>
-            </li>
-            <li>
-                <a href="https://github.com/VitaliiLynnyk">
-                    <img class="icon"
-                         src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Feather-logos-github.svg/1024px-Feather-logos-github.svg.png">
-                </a>
-            </li>
-            <li>
-                <a href="https://www.instagram.com/vitalii.lynnyk/">
-                    <img class="icon"
-                         src="https://cdn2.iconfinder.com/data/icons/social-networks-18/100/Instagram_logo-512.png">
-                </a>
-            </li>
-        </ul>
+      <ul>
+        <li>get in touch &rarr;</li>
+        <li>
+          <a href="https://twitter.com/qu1etRain">
+            <img class="icon"
+                 src="https://image.flaticon.com/icons/svg/59/59046.svg">
+          </a>
+        </li>
+        <li>
+          <a href="https://codepen.io/VitaliiLynnyk">
+            <img class="icon"
+                 src="http://cdn.onlinewebfonts.com/svg/img_336066.png">
+          </a>
+        </li>
+        <li>
+          <a href="https://github.com/VitaliiLynnyk">
+            <img class="icon"
+                 src="https://upload.wikimedia.org/wikipedia/commons/thumb/1/19/Feather-logos-github.svg/1024px-Feather-logos-github.svg.png">
+          </a>
+        </li>
+        <li>
+          <a href="https://www.instagram.com/vitalii.lynnyk/">
+            <img class="icon"
+                 src="https://cdn2.iconfinder.com/data/icons/social-networks-18/100/Instagram_logo-512.png">
+          </a>
+        </li>
+      </ul>
     </section>
-</footer>
-<script src="app.js"></script>
+  </footer>
+  <script src="index.js"></script>
 </body>
 
 </html>
