--- a/index.html
+++ b/index.html
@@ -60,14 +60,14 @@
       </li>
       <li class="main__item">
         <a class="main__link"
-           href="challenge8/index.html">
-          Coding challenge 8
+           href="budjet/index.html">
+          Budjet project
         </a>
       </li>
       <li class="main__item">
         <a class="main__link"
-           href="challenge9/index.html">
-          Coding challenge 9
+           href="challenge8/index.html">
+          Coding challenge 8
         </a>
       </li>
     </ul>
