Added init forkify project files

--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
           Coding challenge 8
         </a>
       </li>
+      <li class="main__item">
+        <a class="main__link"
+           href="dist/index.html">
+          Forkify
+        </a>
+      </li>
     </ul>
     <div class="qoute_containter">
       <h2 class="heading-primary--sub">Qoute</h2>
